crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_Synthesized_methods_(9e6e6c7368530460).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 623
expression: snapshot
---

---
mdtest name: liskov.md - The Liskov Substitution Principle - Synthesized methods
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## mdtest_snippet.pyi

```
 1 | from dataclasses import dataclass
 2 | from typing import NamedTuple
 3 | 
 4 | @dataclass(order=True)
 5 | class Foo:
 6 |     x: int
 7 | 
 8 | class Bar(Foo):  # error: [subclass-of-dataclass-with-order]
 9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
10 | 
11 | # Specifying `order=True` on the subclass means that a `__lt__` method is generated that
12 | # is incompatible with the generated `__lt__` method on the superclass. We don't emit the
13 | # `subclass-of-dataclass-with-order` diagnostic here because the child class overrides all
14 | # comparison methods.
15 | # TODO: We should also emit `invalid-method-override` diagnostics for each generated
16 | # comparison method since they have incompatible signatures.
17 | @dataclass(order=True)
18 | class Bar2(Foo):
19 |     y: str
20 | 
21 | # Although this class does not override any methods of `Foo`, the design of the
22 | # `order=True` stdlib dataclasses feature itself violates the Liskov Substitution
23 | # Principle! Instances of `Bar3` cannot be substituted wherever an instance of `Foo` is
24 | # expected, because the generated `__lt__` method on `Foo` raises an error unless the r.h.s.
25 | # and `l.h.s.` have exactly the same `__class__` (it does not permit instances of `Foo` to
26 | # be compared with instances of subclasses of `Foo`).
27 | class Bar3(Foo): ...  # error: [subclass-of-dataclass-with-order]
28 | 
29 | class Eggs:
30 |     def __lt__(self, other: Eggs) -> bool: ...
31 | 
32 | # TODO: the generated `Ham.__lt__` method here incompatibly overrides `Eggs.__lt__`.
33 | # We could consider emitting a diagnostic here. As of 2025-11-21, mypy reports a
34 | # diagnostic here but pyright and pyrefly do not.
35 | @dataclass(order=True)
36 | class Ham(Eggs):
37 |     x: int
38 | 
39 | class Baz(NamedTuple):
40 |     x: int
41 | 
42 | class Spam(Baz):
43 |     def _asdict(self) -> tuple[int, ...]: ...  # error: [invalid-method-override]
```

# Diagnostics

```
warning[subclass-of-dataclass-with-order]: Class `Bar` inherits from dataclass `Foo` which has `order=True`
 --> src/mdtest_snippet.pyi:8:11
  |
6 |     x: int
7 |
8 | class Bar(Foo):  # error: [subclass-of-dataclass-with-order]
  |           ^^^
9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
  |
info: Comparison of instances of the child class with instances of the parent class will raise `TypeError` at runtime
info: rule `subclass-of-dataclass-with-order` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `__lt__`
  --> src/mdtest_snippet.pyi:9:9
   |
 8 | class Bar(Foo):  # error: [subclass-of-dataclass-with-order]
 9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Foo.__lt__`
10 |
11 | # Specifying `order=True` on the subclass means that a `__lt__` method is generated that
   |
info: This violates the Liskov Substitution Principle
info: `Foo.__lt__` is a generated method created because `Foo` is a dataclass
 --> src/mdtest_snippet.pyi:5:7
  |
4 | @dataclass(order=True)
5 | class Foo:
  |       ^^^ Definition of `Foo`
6 |     x: int
  |
info: rule `invalid-method-override` is enabled by default

```

```
warning[subclass-of-dataclass-with-order]: Class `Bar3` inherits from dataclass `Foo` which has `order=True`
  --> src/mdtest_snippet.pyi:27:12
   |
25 | # and `l.h.s.` have exactly the same `__class__` (it does not permit instances of `Foo` to
26 | # be compared with instances of subclasses of `Foo`).
27 | class Bar3(Foo): ...  # error: [subclass-of-dataclass-with-order]
   |            ^^^
28 |
29 | class Eggs:
   |
info: Comparison of instances of the child class with instances of the parent class will raise `TypeError` at runtime
info: rule `subclass-of-dataclass-with-order` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `_asdict`
  --> src/mdtest_snippet.pyi:43:9
   |
42 | class Spam(Baz):
43 |     def _asdict(self) -> tuple[int, ...]: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Baz._asdict`
   |
info: This violates the Liskov Substitution Principle
info: `Baz._asdict` is a generated method created because `Baz` inherits from `typing.NamedTuple`
  --> src/mdtest_snippet.pyi:39:7
   |
37 |     x: int
38 |
39 | class Baz(NamedTuple):
   |       ^^^^^^^^^^^^^^^ Definition of `Baz`
40 |     x: int
   |
info: rule `invalid-method-override` is enabled by default

```
